--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+# Models
+/[Aa]ssets/Models/
+/[Aa]ssets/Models.meta
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
